config/networking/http-route-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
  - name: cilium
    namespace: default
  hostnames:
  - argo.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: argocd-server
      port: 80
