config/networking/http-route-hubble.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
  - name: cilium
    namespace: default
    sectionName: https
  hostnames:
  - hubble.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: hubble-ui
      port: 80
