config/networking/http-route-upgrade.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect
spec:
  parentRefs:
  - name: cilium
    sectionName: http
  hostnames:
  - "*.jds.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
